@@ -1,5 +1,7 @@
 2008-01-17  Lawrence Mitchell  <wence@gmx.li>
 
+	* ogg-comment.el: New file.  Read Ogg-Vorbis file headers.
+
 	* llm-reftex-fns.el: New file.  Finding hardcopies of papers from
 	reftex citations.
 
